--- a/styles/variables.less
+++ b/styles/variables.less
@@ -3,7 +3,13 @@
 @action-color: #933;
 @hover-color: #f6f6f6;
 @primary-bg-color: #f9f9f9;
+@wrapped-bg-color: #ffffff;
 @input-text-color: #666;
+
+// colors (dark)
+@primary-bg-color-dark: #363636;
+@wrapped-bg-color-dark: #dddddd;
+@hover-color-dark: #e6e6e6;
 
 // sizes
 @min-width: 320px;
