--- a/styles/index.less
+++ b/styles/index.less
@@ -11,6 +11,9 @@ body {
   font-size: 14px;
   line-height: 1.5;
   color: @body-color;
+  @media (prefers-color-scheme: dark) {
+    background: @primary-bg-color-dark;
+  }
 }
 
 h1 {
@@ -22,13 +25,16 @@ h1 {
 h2 {
   font-size: 1em;
   color: #878787;
-  background: #f6f6f6;
   border: 1px solid #ddd;
   border-left: none;
   border-right: none;
   font-weight: normal;
   margin: 1em (-@default-padding);
   padding: 8px @default-padding;
+  background: darken(@wrapped-bg-color, 10);
+  @media (prefers-color-scheme: dark) {
+    background: darken(@wrapped-bg-color-dark, 10);
+  }
 }
 
 div.block > div:first-child > h2,
@@ -80,8 +86,11 @@ h1 {
     margin-top: 1em;
     margin-bottom: 1em;
     padding: @default-padding @default-padding;
-    background: #fff;
+    background: @wrapped-bg-color;
     box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+    @media (prefers-color-scheme: dark) {
+      background: @wrapped-bg-color-dark;
+    }
   }
 
   & > h2:first-child,
@@ -92,7 +101,10 @@ h1 {
 
 h1.block.wrapped {
   margin-bottom: 0;
-  background: #f9f9f9;
+  background: @wrapped-bg-color;
+  @media (prefers-color-scheme: dark) {
+    background: @wrapped-bg-color-dark;
+  }
 }
 
 // nav
@@ -169,6 +181,10 @@ abbr[title] {
     color: @input-text-color;
     padding: 10px @search-horizontal-padding;
     width: 100%;
+    background: @wrapped-bg-color;
+    @media (prefers-color-scheme: dark) {
+      background: @wrapped-bg-color-dark;
+    }
 
     &--active {
       border-radius: 8px 0 0 0;
@@ -197,13 +213,16 @@ abbr[title] {
     border: 1px solid @search-border-color;
     border-left: none;
     color: #333;
-    background: #fff;
+    background: @wrapped-bg-color;
     text-transform: lowercase;
     outline: none;
     font-weight: 700;
     font-size: 16px;
     align-content: center;
     text-align: center;
+    @media (prefers-color-scheme: dark) {
+      background: @wrapped-bg-color-dark;
+    }
 
     &--active {
       border-radius: 0 8px 0 0;
@@ -230,7 +249,10 @@ abbr[title] {
     border-radius: 0 0 8px 8px;
     border: 1px solid @search-border-color;
     border-width: 0 1px;
-    background: #fcfcfc;
+    background: @wrapped-bg-color;
+    @media (prefers-color-scheme: dark) {
+      background: @wrapped-bg-color-dark;
+    }
 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 
@@ -243,10 +265,16 @@ abbr[title] {
 
       &.active {
         background: @hover-color;
+        @media (prefers-color-scheme: dark) {
+          background: @hover-color-dark;
+        }
       }
       &:hover {
         background: @hover-color;
         text-decoration: none;
+        @media (prefers-color-scheme: dark) {
+          background: @hover-color-dark;
+        }
 
         &:last-child {
           border-radius: 0 0 8px 8px;
@@ -293,6 +321,9 @@ abbr[title] {
 
       &:hover {
         background: @hover-color;
+        @media (prefers-color-scheme: dark) {
+          background: @hover-color-dark;
+        }
       }
     }
 
