Adjust dark colors

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -8,8 +8,8 @@
 
 // colors (dark)
 @primary-bg-color-dark: #999999;
-@wrapped-bg-color-dark: #dddddd;
-@hover-color-dark: #e6e6e6;
+@wrapped-bg-color-dark: #cccccc;
+@hover-color-dark: #d6d6d6;
 
 // sizes
 @min-width: 320px;
