Brand new dark mode

--- a/styles/variables.less
+++ b/styles/variables.less
@@ -2,14 +2,20 @@
 @body-color: #24292e;
 @action-color: #933;
 @hover-color: #f6f6f6;
-@primary-bg-color: #f9f9f9;
+@primary-bg-color: #fafafa;
 @wrapped-bg-color: #ffffff;
+@search-bg-color: #ffffff;
 @input-text-color: #666;
+@separator-color: #eee;
 
 // colors (dark)
-@primary-bg-color-dark: #999999;
-@wrapped-bg-color-dark: #cccccc;
-@hover-color-dark: #d6d6d6;
+@body-color-dark: #aaa;
+@hover-color-dark: #444;
+@primary-bg-color-dark: #1c1c1c;
+@wrapped-bg-color-dark: #161616;
+@search-bg-color-dark: #333;
+@input-text-color-dark: #aaa;
+@separator-color-dark: #333;
 
 // sizes
 @min-width: 320px;
