--- a/styles/index.less
+++ b/styles/index.less
@@ -11,7 +11,9 @@ body {
   font-size: 14px;
   line-height: 1.5;
   color: @body-color;
+
   @media (prefers-color-scheme: dark) {
+    color: @body-color-dark;
     background: @primary-bg-color-dark;
   }
 }
@@ -25,7 +27,6 @@ h1 {
 h2 {
   font-size: 1em;
   color: #878787;
-  border: 1px solid #ddd;
   border-left: none;
   border-right: none;
   font-weight: normal;
@@ -44,7 +45,6 @@ div.block > div:first-child > div:first-child > h2 {
 
 a {
   color: @action-color;
-  border-bottom: 1px dotted #999;
   text-decoration: none;
 
   &:hover {
@@ -55,7 +55,6 @@ a {
 button {
   color: @action-color;
   border: none;
-  border-bottom: 1px dotted #999;
   background: transparent;
   padding: 0;
   cursor: pointer;
@@ -73,7 +72,7 @@ h1 {
   min-width: @min-width - 12px;
   margin-left: 6px;
   margin-right: 6px;
-  border-radius: 8px;
+  border-radius: 4px;
 
   @media screen and (min-width: @max-width) {
     margin-left: auto;
@@ -95,7 +94,7 @@ h1 {
 
   & > h2:first-child,
   & > div:first-child h2 {
-    border-radius: 8px 8px 0 0;
+    border-radius: 4px 4px 0 0;
   }
 }
 
@@ -158,36 +157,34 @@ abbr[title] {
   text-align: center;
 
   a {
-    border-bottom: 1px dotted #666;
     text-decoration: none;
   }
 }
 
 // SEARCH
 
-@search-border-color: #ccc;
 @search-horizontal-padding: 8px;
 
 .search {
   &__input-container {
-    display: flex;
+    position: relative;
   }
 
   &__input {
     font-size: 16px;
-    border: 1px solid @search-border-color;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    border: none;
+    border-radius: 4px;
     color: @input-text-color;
     padding: 10px @search-horizontal-padding;
     width: 100%;
-    background: @wrapped-bg-color;
+    background: @search-bg-color;
     @media (prefers-color-scheme: dark) {
-      background: @wrapped-bg-color-dark;
+      background: @search-bg-color-dark;
     }
 
     &--active {
-      border-radius: 8px 0 0 0;
+      border-radius: 4px 4px 0 0;
     }
 
     &:focus {
@@ -196,6 +193,13 @@ abbr[title] {
 
     &::placeholder {
       color: lighten(@input-text-color, 30%);
+      @media (prefers-color-scheme: dark) {
+        color: darken(@input-text-color-dark, 30%);
+      }
+    }
+
+    @media (prefers-color-scheme: dark) {
+      color: @input-text-color-dark;
     }
 
     // experimental: prevent special behaviour for iphone (auto-zoom on focus and inner box shadow)
@@ -206,26 +210,17 @@ abbr[title] {
   }
 
   &__clear-button {
-    display: inline-block;
+    position: absolute;
+    right: 0;
     width: 30px;
-    padding: 0;
-    margin-left: -1px;
-    border: 1px solid @search-border-color;
-    border-left: none;
-    color: #333;
-    background: @wrapped-bg-color;
-    text-transform: lowercase;
+    color: @body-color;
     outline: none;
-    font-weight: 700;
-    font-size: 16px;
+    font-size: 28px;
+    font-weight: 300;
     align-content: center;
     text-align: center;
     @media (prefers-color-scheme: dark) {
-      background: @wrapped-bg-color-dark;
-    }
-
-    &--active {
-      border-radius: 0 8px 0 0;
+      color: @body-color-dark;
     }
   }
 
@@ -246,12 +241,11 @@ abbr[title] {
     left: 0;
     right: 0;
     z-index: 1;
-    border-radius: 0 0 8px 8px;
-    border: 1px solid @search-border-color;
+    border-radius: 0 0 4px 4px;
     border-width: 0 1px;
-    background: @wrapped-bg-color;
+    background: @search-bg-color;
     @media (prefers-color-scheme: dark) {
-      background: @wrapped-bg-color-dark;
+      background: @search-bg-color-dark;
     }
 
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
@@ -277,7 +271,7 @@ abbr[title] {
         }
 
         &:last-child {
-          border-radius: 0 0 8px 8px;
+          border-radius: 0 0 4px 4px;
         }
       }
 
@@ -304,8 +298,6 @@ abbr[title] {
 
 // MATCHES
 
-@table-border-color: #ddd;
-
 .matches {
   &__container {
     width: 100%;
@@ -313,7 +305,7 @@ abbr[title] {
 
     tbody tr {
       cursor: pointer;
-      border-top: 1px solid @table-border-color;
+      border-top: 1px solid @separator-color;
 
       &:first-child {
         border-top: none;
@@ -324,6 +316,10 @@ abbr[title] {
         @media (prefers-color-scheme: dark) {
           background: @hover-color-dark;
         }
+      }
+
+      @media (prefers-color-scheme: dark) {
+        border-top: 1px solid @separator-color-dark;
       }
     }
 
@@ -394,7 +390,6 @@ abbr[title] {
 
 // COMPETITION STANDINGS
 
-@standings-border-color: #ddd;
 @blurred-text-color: #888;
 
 .standings {
@@ -405,7 +400,10 @@ abbr[title] {
   }
 
   tbody tr {
-    border-top: 1px solid @standings-border-color;
+    border-top: 1px solid @separator-color;
+    @media (prefers-color-scheme: dark) {
+      border-top: 1px solid @separator-color-dark;
+    }
   }
 
   th,
