--- a/styles/variables.less
+++ b/styles/variables.less
@@ -10,6 +10,7 @@
 
 // colors (dark)
 @body-color-dark: #aaa;
+@action-color-dark: #c99;
 @hover-color-dark: #333;
 @primary-bg-color-dark: #1c1c1c;
 @wrapped-bg-color-dark: #161616;
