--- a/styles/index.scss
+++ b/styles/index.scss
@@ -220,10 +220,12 @@ $search-horizontal-padding: 8px;
   }
 
   &__error {
+    color: #900;
     padding-top: 3px;
     padding-left: $default-padding;
     margin-bottom: -4px;
     font-size: 11px;
+    font-weight: bold;
   }
 
   &__results {
