--- a/styles/index.scss
+++ b/styles/index.scss
@@ -130,12 +130,6 @@ h1.block.wrapped {
   }
 }
 
-.error {
-  margin: 0;
-  color: #c33;
-  font-weight: 500;
-}
-
 abbr[title] {
   text-decoration: none;
 }
@@ -216,12 +210,13 @@ $search-horizontal-padding: 8px;
   }
 
   &__error {
-    color: #900;
-    padding-top: 3px;
+    color: $action-color;
     padding-left: $default-padding;
-    margin-bottom: -4px;
-    font-size: 11px;
-    font-weight: bold;
+    font-weight: 500;
+
+    @media (prefers-color-scheme: dark) {
+      color: $action-color-dark;
+    }
   }
 
   &__results {
