--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,7 @@
 @import "variables";
 @import "normalize-scss/sass/normalize";
 @import "base";
+@import "nprogress";
 
 body {
   padding: 1em 0;
@@ -78,7 +79,7 @@ h1 {
   min-width: $min-width - 12px;
   margin-left: 6px;
   margin-right: 6px;
-  border-radius: 4px;
+  border-radius: 8px;
 
   @media screen and (min-width: $max-width) {
     margin-left: auto;
@@ -99,7 +100,7 @@ h1 {
 
   & > h2:first-child,
   & > div:first-child h2 {
-    border-radius: 4px 4px 0 0;
+    border-radius: 8px 8px 0 0;
   }
 }
 
@@ -159,7 +160,7 @@ $search-horizontal-padding: 8px;
   &__input {
     font-size: 16px;
     border: none;
-    border-radius: 4px;
+    border-radius: 8px;
     color: $input-text-color;
     padding: 10px $search-horizontal-padding;
     width: 100%;
@@ -169,7 +170,7 @@ $search-horizontal-padding: 8px;
     }
 
     &--clearable {
-      border-radius: 4px 4px 0 0;
+      border-radius: 8px 8px 0 0;
     }
 
     &:focus {
@@ -220,7 +221,7 @@ $search-horizontal-padding: 8px;
   }
 
   &__results {
-    border-radius: 5px;
+    border-radius: 8px;
     border-width: 1px;
     background: $search-bg-color;
     @media (prefers-color-scheme: dark) {
@@ -256,10 +257,10 @@ $search-horizontal-padding: 8px;
     }
 
     li:first-child a:hover {
-      border-radius: 5px 5px 0 0;
+      border-radius: 8px 8px 0 0;
     }
     li:last-child a:hover {
-      border-radius: 0 0 5px 5px;
+      border-radius: 0 0 8px 8px;
     }
   }
 
