--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,24 +1,20 @@
 // colors
-$body-color: #24292e;
-$action-color: #933;
-$hover-color: #f6f6f6;
-$primary-bg-color: #fafafa;
-$wrapped-bg-color: #ffffff;
-$search-bg-color: #ffffff;
-$input-text-color: #666;
+$body-color: rgba(0, 0, 0, 0.95);
+$action-color: rgb(250, 35, 59);
+$primary-bg-color: rgba(60, 60, 67, 0.03);
+$block-bg-color: #ffffff;
+$search-bg-color: #eee;
 $separator-color: #eee;
 
 // colors (dark)
-$body-color-dark: #aaa;
-$action-color-dark: #c55;
-$hover-color-dark: #333;
-$primary-bg-color-dark: #1c1c1c;
-$wrapped-bg-color-dark: #161616;
-$search-bg-color-dark: #222;
-$input-text-color-dark: #aaa;
-$separator-color-dark: #222;
+$body-color-dark: rgba(255, 255, 255, 0.8);
+$action-color-dark: rgb(250, 55, 72);
+$primary-bg-color-dark: rgb(31, 31, 31);
+$block-bg-color-dark: rgba(235, 235, 245, 0.03);
+$search-bg-color-dark: #111;
+$separator-color-dark: #111;
 
 // sizes
 $min-width: 320px;
-$max-width: 480px;
+$max-width: 520px;
 $default-padding: 10px;
