--- a/styles/paginated-fixtures.scss
+++ b/styles/paginated-fixtures.scss
@@ -4,8 +4,16 @@
     justify-content: space-between;
   }
   &__nav {
-    a {
+    a,
+    span {
       margin-left: 0.5rem;
+    }
+    .disabled {
+      cursor: not-allowed;
+      color: darken($body-color, 60);
+      @media (prefers-color-scheme: dark) {
+        color: darken($body-color-dark, 60);
+      }
     }
   }
 }
