--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,7 +1,7 @@
 // colors
 $body-color: rgba(0, 0, 0, 0.95);
 $action-color: rgb(250, 35, 59);
-$primary-bg-color: rgba(60, 60, 67, 0.03);
+$body-bg-color: rgba(60, 60, 67, 0.03);
 $block-bg-color: #ffffff;
 $search-bg-color: #eee;
 $separator-color: #eee;
@@ -9,7 +9,7 @@ $separator-color: #eee;
 // colors (dark)
 $body-color-dark: rgba(255, 255, 255, 0.8);
 $action-color-dark: rgb(250, 55, 72);
-$primary-bg-color-dark: rgb(31, 31, 31);
+$body-bg-color-dark: rgb(31, 31, 31);
 $block-bg-color-dark: rgba(235, 235, 245, 0.03);
 $search-bg-color-dark: #111;
 $separator-color-dark: #111;
