--- a/styles/head.scss
+++ b/styles/head.scss
@@ -36,7 +36,7 @@ $search-horizontal-padding: 8px;
   }
 
   &__input {
-    font-size: 1.11em;
+    font-size: 1.11rem;
     border: none;
     border-radius: 8px;
     color: $body-color;
