--- a/styles/error.scss
+++ b/styles/error.scss
@@ -2,7 +2,7 @@
   &__wrapper {
     p {
       margin: 1em 0;
-      padding: 0 0.5em;
+      padding: 0 0.5rem;
       font-weight: 500;
     }
   }
