--- a/styles/index.scss
+++ b/styles/index.scss
@@ -3,13 +3,17 @@
 @import "base";
 @import "nprogress";
 
+html,
 body {
-  padding: 1em 0;
-  background: $body-bg-color;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif;
   font-size: 14px;
   line-height: 1.5;
+}
+
+body {
+  padding: 1em 0;
+  background: $body-bg-color;
   color: $body-color;
 
   @media (prefers-color-scheme: dark) {
@@ -19,13 +23,13 @@ body {
 }
 
 h1 {
-  font-size: 1.05rem;
+  font-size: 1.11rem;
   padding: 0 $default-padding;
   font-weight: 500;
 }
 
 h2 {
-  font-size: 0.95rem;
+  font-size: 1rem;
   text-transform: uppercase;
   font-weight: 500;
   padding: 0 $default-padding;
