Tweak look&feel :lipstick:

--- a/styles/paginated-fixtures.scss
+++ b/styles/paginated-fixtures.scss
@@ -10,7 +10,7 @@
     }
     .disabled {
       cursor: not-allowed;
-      color: darken($body-color, 60);
+      color: lighten($body-color, 60);
       @media (prefers-color-scheme: dark) {
         color: darken($body-color-dark, 60);
       }
