--- a/styles/head.scss
+++ b/styles/head.scss
@@ -3,8 +3,6 @@
   align-items: center;
 }
 
-$logo-size: 44px;
-
 .logo {
   width: $logo-size;
   height: $logo-size;
@@ -18,13 +16,13 @@ $logo-size: 44px;
 
   &__background {
     color: $block-bg-color;
+    fill: $block-bg-color;
     @media (prefers-color-scheme: dark) {
       color: $block-bg-color-dark;
+      fill: $block-bg-color-dark;
     }
   }
 }
-
-$search-horizontal-padding: 8px;
 
 .search {
   &__container {
@@ -36,7 +34,7 @@ $search-horizontal-padding: 8px;
   }
 
   &__input {
-    font-size: 1.11rem;
+    font-size: 1.11 * $font-size;
     border: none;
     border-radius: 8px;
     color: $body-color;
@@ -124,12 +122,6 @@ $search-horizontal-padding: 8px;
       padding: 6px $search-horizontal-padding;
       border: none;
 
-      font-size: 15px;
-
-      @media screen and (min-width: $max-width) {
-        font-size: 14px;
-      }
-
       &.active {
         font-weight: 700;
         &:before {
@@ -152,7 +144,7 @@ $search-horizontal-padding: 8px;
   &__loader {
     padding: 5px $search-horizontal-padding;
     font-style: italic;
-    font-size: 13px;
+    font-size: 0.95 * $font-size;
   }
 
   &__highlight {
