--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,7 +7,7 @@ html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
     sans-serif;
-  font-size: 14px;
+  font-size: $font-size;
   line-height: 1.5;
 }
 
@@ -23,13 +23,13 @@ body {
 }
 
 h1 {
-  font-size: 1.11rem;
+  font-size: 1.11 * $font-size;
   padding: 0 $default-padding;
   font-weight: 500;
 }
 
 h2 {
-  font-size: 1rem;
+  font-size: $font-size;
   text-transform: uppercase;
   font-weight: 500;
   padding: 0 $default-padding;
@@ -104,7 +104,7 @@ abbr[title] {
   margin-bottom: 2rem;
   font-style: italic;
   padding: 0 $default-padding;
-  font-size: 12px;
+  font-size: 0.8 * $font-size;
   text-align: center;
 
   a {
